--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
+    "@react-three/cannon": "^5.1.0",
+    "@react-three/drei": "^8.19.2",
+    "@react-three/fiber": "^7.0.26",
+    "@react-three/postprocessing": "^2.2.6",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/three": "^0.139.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-spring": "^9.4.4",
+    "react-use-gesture": "^9.1.3",
+    "three": "^0.139.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "zustand": "^3.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
