--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-use-gesture": "^9.1.3",
     "three": "^0.139.0",
     "typescript": "^4.4.2",
+    "wouter": "^2.8.0-alpha.2",
     "zustand": "^3.7.1"
   },
   "scripts": {
