--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/three": "^0.139.0",
+    "@types/wouter": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
     "react-spring": "^9.4.4",
     "react-use-gesture": "^9.1.3",
